plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

configurations {
	mockitoAgent
}




dependencies {
	mockitoAgent 'net.bytebuddy:byte-buddy-agent:1.15.10'



	// Spring Boot e JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok
	implementation 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	// Banco de Dados: PostgreSQL
	runtimeOnly 'org.postgresql:postgresql'

	// Testes
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
	testImplementation 'org.mockito:mockito-core:5.14.2'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs(['-XX:+EnableDynamicAgentLoading', '-Xshare:off', '-javaagent:' + configurations.mockitoAgent.asPath])
}
